<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nanda.kamus_indonesia_mandailing.MainActivity"
    android:theme="@style/Base.Theme.AppCompat.Light.DarkActionBar"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/logo_text"
        android:src="@drawable/it" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/kamus"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:text="@string/tentang" />

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:text="@string/keluar" />

</LinearLayout>
