<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Kamus Mandailing - Indonesia"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~"
        android:gravity="center"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="center"/>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/TextView01"
            android:text="@string/mandailing_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtMandailing"
            android:layout_marginEnd="20dp"/>
    </TableRow>

    <Button
        android:id="@+id/btnTerjemah"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="getTerjemahan"
        android:text="@string/cari"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="250dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indonesia_label"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />

    <EditText
        android:id="@id/txtIndonesia"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

</LinearLayout>